# NTUCS-ADL

./: README.md  pyproject.toml
final/: README.md  base.py  execution_pipeline.py  main.py  pyproject.toml  setup_data.py  test_env.py  utils.py
final/benchmarks/: base.py  ddxplus.py  text_to_sql.py
final/benchmarks/text2sql_utils/: sqlite_interpreter.py  string_formatter.py
final/examples/: self_streamicl.py  zeroshot.py
hw1/: .gitignore  README.md  download.sh  endtoend.py  plot.py  predict.py  pyproject.toml  run.sh  selection.py  span.py  utils_qa.py
hw2/: .gitignore  README.md  download.sh  plot.py  predict.py  pyproject.toml  requirements.txt  run.sh  summary.py  test.py  tw_rouge.py  utils.py
hw3/: .gitignore  README.md  download.sh  plot.py  ppl.py  ppl2.py  predict.py  prediction.json  pyproject.toml  run.sh  test.py  test2.py  train.py  train.sh  utils.py
