[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.4.1+cu124", source = "torch"}
gdown = "^5.2.0"
colorama = "^0.4.6"
faiss-cpu = "^1.9.0"
func-timeout = "^4.3.5"
transformers = "^4.46.2"
datasets = "^3.1.0"
tqdm = "^4.67.0"
evaluate = "^0.4.3"
scikit-learn = "^1.5.2"
accelerate = "^1.1.1"
bitsandbytes = "^0.44.1"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"
pandas = "^2.2.3"
wandb = "^0.18.6"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
