[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["RulerChen <a20196780@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "2.1.0+cu121", source = "torch"}
transformers = "4.44.2"
datasets = "2.21.0"
accelerate = "0.34.2"
sentencepiece = "0.2.0"
evaluate = "0.4.3"
rouge = "1.0.1"
spacy = "3.7.6"
nltk = "3.9.1"
ckiptagger = "0.2.1"
gdown = "5.2.0"
tensorflow-io-gcs-filesystem={ version = "0.31.0", python = "<3.12" }
tensorflow = "2.13.0"
rouge-score = "^0.1.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
